--- a/client/views/contact/contact.html
+++ b/client/views/contact/contact.html
@@ -1,10 +1,9 @@
 <head>
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA76GsfIZEhzF6byO0sCz2XXkh23nMXadQ&sensor=false">
 </script>
-
 </head>
-<template name="kontakt">
-	<div class="kontakt grid-wrapper">
+<template name="contact">
+	<div class="contact grid-wrapper">
     <h2>
       Nehmen Sie
       <strong>
@@ -14,14 +13,14 @@
     <h4>
       If you have any questions or comments, please get in touch:
     </h4>
-  	<img src="/img/contact/tel-big.png" class="kontakt-symbol" alt="Telefon-Symbol">
-  	<p class="telefonnummer">
+  	<img src="/img/contact/tel-big.png" class="contact-symbol" alt="Telefon-Symbol">
+  	<p class="phonenumber">
   	  030 609 8448 - 11
   	</p>
-  	<p class="oder">
+  	<p class="contact-or">
   	  oder
   	</p>
-  	<img src="/img/contact/mail-big.png" class="kontakt-symbol mail-bild" alt="Email-Symbol">
+  	<img src="/img/contact/mail-big.png" class="contact-symbol mail-image" alt="Email-Symbol">
   	<br>
   	<a href="mailto:beta@about-local.com">
   	  beta@about-local.com
@@ -34,7 +33,7 @@
         </div>
       </div>
     </div>
-  	<p class="adresse">
+  	<p class="address">
     	<strong>
     	  aboutLocal GmbH
     	</strong>
