--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -57,7 +57,7 @@
 				</p>
 				<a href="/tour/filter-slide/">mehr Informationen</a>
 			</li>
-			<li class="lastItem">
+			<li class="last-item">
 				<h4 class="headline-deal">
 					<span class="function-headline">
 						Gutschein-Special
@@ -79,7 +79,7 @@
   	</h3>
   </div>
 
-  <div class="grid-wrapper grayLine partner-box">
+  <div class="grid-wrapper gray-line partner-box">
   	<span class="seitwert-logo partner-link">
     </span>
   	<span class="adSearchEngine-logo partner-link">
@@ -88,7 +88,7 @@
     </span>
   </div>
   <div class="grid-wrapper quote-slideshow">
-    <div class="grid-wrapper grayLine">
+    <div class="grid-wrapper gray-line">
 		  <div class="portrait-container">
 			  <img src="/img/homepage/favorit.png" alt="favor.it-Logo" class="portrait">
 		  </div>
@@ -101,7 +101,7 @@
 			  </span>
 		  </div>
     </div>
-    <div class="grid-wrapper grayLine">
+    <div class="grid-wrapper gray-line">
 		  <div class="portrait-container">
 			  <img src="/img/homepage/rp-online.png" alt="RP-Online-Logo" class="portrait">
 		  </div>
@@ -195,7 +195,7 @@
 					  </div>
 					  <div class="newsletterbox">
 						  <input type="checkbox" name="newsletter" id="newsletter" value="yes">
-						  <label for="newsletter" class="newsletterLabel">
+						  <label for="newsletter" class="newsletter-label">
 							  Ja, ich m&ouml;chte aktuelle Informationen von AboutLocal erhalten.
 						  </label>
 					  </div>
@@ -253,7 +253,7 @@
 						  Nehmen Sie Kontakt auf
 					  </h4>
 				  </div>
-				  <div class="conversionbox-inner fehlermeldung-box">  		
+				  <div class="conversionbox-inner errormessage-box">  		
             <h2>
               Es ist ein Fehler aufgetreten!
             </h2>
