--- a/client/views/team/team.html
+++ b/client/views/team/team.html
@@ -44,7 +44,7 @@
       <div class="slider-wrapper theme-default">
         <div class="ribbon">
         </div>
-        <div id="team-slider" class="nivoSlider">
+        <div id="team-slider" class="nivo-slider">
             <img src="/img/team/jossi.jpg" alt="">
             <img src="/img/team/mark.jpg" alt="">
             <img src="/img/team/franz.jpg" alt="">
