fixed height for quotes on homepage

--- a/sphere.styl
+++ b/sphere.styl
@@ -1129,7 +1129,10 @@ myGray4 = #cacbcc
     &:hover
       background-position -250px -65px
     */
-  
+
+.quote-slide
+  height 133px
+
 .gray-line
   padding-top ( line-height - 1 ) px
   padding-bottom line
