--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -88,7 +88,7 @@
     </span>
   </div>
   <div class="grid-wrapper quote-slideshow">
-    <div class="grid-wrapper gray-line">
+    <div class="grid-wrapper gray-line quote-slide">
 		  <div class="portrait-container">
 			  <img src="/img/homepage/favorit.png" alt="favor.it-Logo" class="portrait">
 		  </div>
@@ -101,7 +101,7 @@
 			  </span>
 		  </div>
     </div>
-    <div class="grid-wrapper gray-line">
+    <div class="grid-wrapper gray-line quote-slide">
 		  <div class="portrait-container">
 			  <img src="/img/homepage/rp-online.png" alt="RP-Online-Logo" class="portrait">
 		  </div>
