--- a/client/views/tour/tour.html
+++ b/client/views/tour/tour.html
@@ -245,11 +245,11 @@
 						  </span>
 					  </div>
 					  <div class="form-line">
-						  <label for="email">
+						  <label for="call-back-email">
 							  E-Mail
 						  </label>
 						  <span class="form-field">
-							  <input type="text" name="email" id="email">
+							  <input type="text" name="call-back-email" id="call-back-email">
 						  </span>
 					  </div>
 					  <div class="form-line">
