--- a/client/views/privacyPolicy/privacyPolicy.html
+++ b/client/views/privacyPolicy/privacyPolicy.html
@@ -1,32 +1,90 @@
 <template name="privacyPolicy">
-<pre>
-Datenschutzerklärung
-Wir freuen uns über Ihr Interesse an unserer Homepage und unserem Unternehmen. Für externe Links zu fremden Inhalten können wir dabei trotz sorgfältiger inhaltlicher Kontrolle keine Haftung übernehmen.
-Der Schutz Ihrer personenbezogenen Daten bei der Erhebung, Verarbeitung und Nutzung anlässlich Ihres Besuchs auf unserer Homepage ist uns ein wichtiges Anliegen. Ihre Daten werden im Rahmen der gesetzlichen Vorschriften geschützt. Nachfolgend finden Sie Informationen, welche Daten während Ihres Besuchs auf der Homepage erfasst und wie diese genutzt werden:
-Wenn Sie Fragen zum Datenschutz haben, Rechte oder Ansprüche zu Ihren personenbezogenen Daten ausüben möchten, schicken Sie uns bitte ein E-Mail an info@about-local.com
+
+<div class="grid-wrapper">
+<h2>
+    Datenschutzerklärung
+</h2>
+
+<p>
+    Wir freuen uns über Ihr Interesse an unserer Homepage und unserem Unternehmen. Für externe Links zu fremden Inhalten können wir dabei trotz sorgfältiger inhaltlicher Kontrolle keine Haftung übernehmen.
+</p>
+<p>
+    Der Schutz Ihrer personenbezogenen Daten bei der Erhebung, Verarbeitung und Nutzung anlässlich Ihres Besuchs auf unserer Homepage ist uns ein wichtiges Anliegen. Ihre Daten werden im Rahmen der gesetzlichen Vorschriften geschützt. Nachfolgend finden Sie Informationen, welche Daten während Ihres Besuchs auf der Homepage erfasst und wie diese genutzt werden:
+</p>
+<p>
+    Wenn Sie Fragen zum Datenschutz haben, Rechte oder Ansprüche zu Ihren personenbezogenen Daten ausüben möchten, schicken Sie uns bitte ein E-Mail an info@about-local.com
+</p>
 	
-1. Erhebung und Verarbeitung von Daten
-Jeder Zugriff auf unsere Homepage und jeder Abruf einer auf der Homepage hinterlegten Datei werden protokolliert. Die Speicherung dient internen systembezogenen und statistischen Zwecken. Protokolliert werden: Name der abgerufenen Datei, Datum und Uhrzeit des Abrufs, übertragene Datenmenge, Meldung über erfolgreichen Abruf, Webbrowser und anfragende Domain.
-Weitergehende personenbezogene Daten werden nur erfasst, wenn Sie diese Angaben freiwillig, etwa im Rahmen einer Anfrage oder Registrierung, machen.
-2. Nutzung und Weitergabe personenbezogener Daten
-Soweit Sie uns personenbezogene Daten zur Verfügung gestellt haben, verwenden wir diese nur zur Beantwortung Ihrer Anfragen, zur Abwicklung mit Ihnen geschlossener Verträge und für die technische Administration.
-Ihre personenbezogenen Daten werden an Dritte nur weitergegeben oder sonst übermittelt, wenn dies zum Zwecke der Vertragsabwicklung – insbesondere Weitergabe von Bestelldaten an Lieferanten – erforderlich ist, dies zu Abrechnungszwecken erforderlich ist oder Sie zuvor eingewilligt haben. Sie haben das Recht, eine erteilte Einwilligung mit Wirkung für die Zukunft jederzeit zu widerrufen.
-Die Löschung der gespeicherten personenbezogenen Daten erfolgt, wenn Sie Ihre Einwilligung zur Speicherung widerrufen, wenn ihre Kenntnis zur Erfüllung des mit der Speicherung verfolgten Zwecks nicht mehr erforderlich ist oder wenn ihre Speicherung aus sonstigen gesetzlichen Gründen unzulässig ist.
-3. Auskunftsrecht
-Auf schriftliche Anfrage werden wir Sie gern über die zu Ihrer Person gespeicherten Daten informieren.
-4. Einwilligung, Widerrufsrecht und Widerspruchsrecht
-Soweit wir Daten für einen Zweck nutzen, der nach den gesetzlichen Bestimmungen Ihre Einwilligung erfordert, werden wir Sie stets um Ihr ausdrückliches Einverständnis bitten und Ihre Einwilligung gemäß den datenschutzrechtlichen Vorschriften protokollieren. Sie können Ihr einmal gegebenes Einverständnis jederzeit mit Wirkung für die Zukunft widerrufen und/ oder künftigen Verwendungen Ihrer Daten für Zwecke der Werbung, Markt- und Meinungsforschung widersprechen. Zum Widerruf einer Einwilligung oder für einen Widerspruch genügt eine einfache Nachricht an uns. Sie können dazu die oben angegebenen Kontaktdaten verwenden, ohne dass Ihnen andere Kosten als die Übermittlungskosten nach dem Basistarif entstehen.
-Sicherheitshinweis:
-Wir sind bemüht, Ihre personenbezogenen Daten durch Ergreifung aller technischen und organisatorischen Möglichkeiten so zu speichern, dass sie für Dritte nicht zugänglich sind. Bei der Kommunikation per E Mail kann die vollständige Datensicherheit von uns nicht gewährleistet werden, so dass wir Ihnen bei vertraulichen Informationen den Postweg empfehlen.
-Google Analytics 
-Diese Website benutzt Google Analytics, einen Webanalysedienst der Google Inc. („Google“). Google Analytics verwendet sog. „Cookies“, Textdateien, die auf Ihrem Computer gespeichert werden und die eine Analyse der Benutzung der Website durch Sie ermöglichen. Die durch den Cookie erzeugten Informationen über Ihre Benutzung dieser Website werden in der Regel an einen Server von Google in den USA übertragen und dort gespeichert. Im Auftrag des Betreibers dieser Website wird Google diese Informationen benutzen, um Ihre Nutzung der Website auszuwerten, um Reports über die Websiteaktivitäten zusammenzustellen und um weitere mit der Websitenutzung und der Internetnutzung verbundene Dienstleistungen gegenüber dem Websitebetreiber zu erbringen. Die im Rahmen von Google Analytics von Ihrem Browser übermittelte IP-Adresse wird nicht mit anderen Daten von Google zusammengeführt.
-Sie können die Speicherung der Cookies durch eine entsprechende Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website vollumfänglich werden nutzen können. Sie können darüber hinaus die Erfassung der durch das Cookie erzeugten und auf Ihre Nutzung der Website bezogenen Daten (inkl. Ihrer IP-Adresse) an Google sowie die Verarbeitung dieser Daten durch Google verhindern, indem sie das unter dem folgenden Link verfügbare Plugin herunterladen und installieren: (http://tools.google.com/dlpage/gaoptout?hl=de). Angesichts der Diskussion um den Einsatz von Analysetools mit vollständigen IP-Adressen möchten wir darauf hinweisen, dass diese Website Google Analytics mit der Erweiterung "_anonymizeIp()" verwendet und daher IP-Adressen nur gekürzt weiterverarbeitet werden, um eine direkte Personenbeziehbarkeit auszuschließen.
-Hinweis:
-Die datenschutzkonforme Verwendung von Google Analytics ist nach Auffassung der deutschen Datenschutzbehörden nur unter Beachtung der folgenden Punkte möglich:
-•	Vertrag zur Auftragsdatenverarbeitung mit Google (Download)
-•	Anonymisierung der IP-Adressen
-•	Widerspruchsrecht der Betroffenen
-•	angepasster Datenschutzhinweis (wie vorstehend)
-•	Löschung von Altdaten (bestehende Google Analytics Profile)
-</pre>
+<h2>
+    1. Erhebung und Verarbeitung von Daten
+</h2>
+<p>
+    Jeder Zugriff auf unsere Homepage und jeder Abruf einer auf der Homepage hinterlegten Datei werden protokolliert. Die Speicherung dient internen systembezogenen und statistischen Zwecken. Protokolliert werden: Name der abgerufenen Datei, Datum und Uhrzeit des Abrufs, übertragene Datenmenge, Meldung über erfolgreichen Abruf, Webbrowser und anfragende Domain.
+</p>
+<p>
+    Weitergehende personenbezogene Daten werden nur erfasst, wenn Sie diese Angaben freiwillig, etwa im Rahmen einer Anfrage oder Registrierung, machen.
+</p>
+<h2>
+    2. Nutzung und Weitergabe personenbezogener Daten
+</h2>
+<p>
+    Soweit Sie uns personenbezogene Daten zur Verfügung gestellt haben, verwenden wir diese nur zur Beantwortung Ihrer Anfragen, zur Abwicklung mit Ihnen geschlossener Verträge und für die technische Administration.
+</p>
+<p>
+    Ihre personenbezogenen Daten werden an Dritte nur weitergegeben oder sonst übermittelt, wenn dies zum Zwecke der Vertragsabwicklung – insbesondere Weitergabe von Bestelldaten an Lieferanten – erforderlich ist, dies zu Abrechnungszwecken erforderlich ist oder Sie zuvor eingewilligt haben. Sie haben das Recht, eine erteilte Einwilligung mit Wirkung für die Zukunft jederzeit zu widerrufen.
+</p>
+<p>
+    Die Löschung der gespeicherten personenbezogenen Daten erfolgt, wenn Sie Ihre Einwilligung zur Speicherung widerrufen, wenn ihre Kenntnis zur Erfüllung des mit der Speicherung verfolgten Zwecks nicht mehr erforderlich ist oder wenn ihre Speicherung aus sonstigen gesetzlichen Gründen unzulässig ist.
+</p>
+<h2>
+    3. Auskunftsrecht
+</h2>
+<p>
+    Auf schriftliche Anfrage werden wir Sie gern über die zu Ihrer Person gespeicherten Daten informieren.
+</p>
+<h2>
+    4. Einwilligung, Widerrufsrecht und Widerspruchsrecht
+</h2>
+<p>
+    Soweit wir Daten für einen Zweck nutzen, der nach den gesetzlichen Bestimmungen Ihre Einwilligung erfordert, werden wir Sie stets um Ihr ausdrückliches Einverständnis bitten und Ihre Einwilligung gemäß den datenschutzrechtlichen Vorschriften protokollieren. Sie können Ihr einmal gegebenes Einverständnis jederzeit mit Wirkung für die Zukunft widerrufen und/ oder künftigen Verwendungen Ihrer Daten für Zwecke der Werbung, Markt- und Meinungsforschung widersprechen. Zum Widerruf einer Einwilligung oder für einen Widerspruch genügt eine einfache Nachricht an uns. Sie können dazu die oben angegebenen Kontaktdaten verwenden, ohne dass Ihnen andere Kosten als die Übermittlungskosten nach dem Basistarif entstehen.
+</p>
+<h2>
+    Sicherheitshinweis:
+</h2>
+<p>
+    Wir sind bemüht, Ihre personenbezogenen Daten durch Ergreifung aller technischen und organisatorischen Möglichkeiten so zu speichern, dass sie für Dritte nicht zugänglich sind. Bei der Kommunikation per E Mail kann die vollständige Datensicherheit von uns nicht gewährleistet werden, so dass wir Ihnen bei vertraulichen Informationen den Postweg empfehlen.
+</p>
+<h2>
+    Google Analytics 
+</h2>
+<p>
+    Diese Website benutzt Google Analytics, einen Webanalysedienst der Google Inc. („Google“). Google Analytics verwendet sog. „Cookies“, Textdateien, die auf Ihrem Computer gespeichert werden und die eine Analyse der Benutzung der Website durch Sie ermöglichen. Die durch den Cookie erzeugten Informationen über Ihre Benutzung dieser Website werden in der Regel an einen Server von Google in den USA übertragen und dort gespeichert. Im Auftrag des Betreibers dieser Website wird Google diese Informationen benutzen, um Ihre Nutzung der Website auszuwerten, um Reports über die Websiteaktivitäten zusammenzustellen und um weitere mit der Websitenutzung und der Internetnutzung verbundene Dienstleistungen gegenüber dem Websitebetreiber zu erbringen. Die im Rahmen von Google Analytics von Ihrem Browser übermittelte IP-Adresse wird nicht mit anderen Daten von Google zusammengeführt.
+</p>
+<p>
+    Sie können die Speicherung der Cookies durch eine entsprechende Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website vollumfänglich werden nutzen können. Sie können darüber hinaus die Erfassung der durch das Cookie erzeugten und auf Ihre Nutzung der Website bezogenen Daten (inkl. Ihrer IP-Adresse) an Google sowie die Verarbeitung dieser Daten durch Google verhindern, indem sie das unter dem folgenden Link verfügbare Plugin herunterladen und installieren: (http://tools.google.com/dlpage/gaoptout?hl=de). Angesichts der Diskussion um den Einsatz von Analysetools mit vollständigen IP-Adressen möchten wir darauf hinweisen, dass diese Website Google Analytics mit der Erweiterung "_anonymizeIp()" verwendet und daher IP-Adressen nur gekürzt weiterverarbeitet werden, um eine direkte Personenbeziehbarkeit auszuschließen.
+</p>
+<h2>
+    Hinweis:
+</h2>
+<p>
+    Die datenschutzkonforme Verwendung von Google Analytics ist nach Auffassung der deutschen Datenschutzbehörden nur unter Beachtung der folgenden Punkte möglich:
+</p>
+<ul>
+    <li>
+        Vertrag zur Auftragsdatenverarbeitung mit Google (Download)
+    </li>
+    <li>
+        Anonymisierung der IP-Adressen
+    </li>
+    <li>
+        Widerspruchsrecht der Betroffenen
+    </li>
+    <li>
+        angepasster Datenschutzhinweis (wie vorstehend)
+    </li>
+    <li>
+        Löschung von Altdaten (bestehende Google Analytics Profile)
+    </li>
+</ul>
+</div>
 </template>
