fix login box for firefox

--- a/sphere.styl
+++ b/sphere.styl
@@ -314,8 +314,8 @@ transition()
         line-height lines1
     label, input[type="text"], input[type="password"], button, a
         display block
-        box-sizing border-box
-        width 100%
+        //box-sizing border-box
+        width 200px - 26px
     input[type="text"], input[type="password"]
         color black
     label.checkbox, a
