fix baseline and height for firefox

--- a/sphere.styl
+++ b/sphere.styl
@@ -398,7 +398,7 @@ transition()
             margin-top 4px
         li
             font-size 16px
-            padding-top 2px
+            //padding-top 2px
             height bar-height
             display inline-block
             box-sizing border-box
