--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -162,11 +162,11 @@
 						  Oder fordern Sie einen R&uuml;ckruf an:
 					  </h4>
 					  <div class="form-line">
-						  <label for="name">
+						  <label for="fullname">
 							  Name
 						  </label>
 						  <span class="form-field">
-							  <input type="text" name="name" id="name">
+							  <input type="text" name="fullname" id="fullname">
 						  </span>
 					  </div>
 					  <div class="form-line">
