--- a/client/views/tour/tour.html
+++ b/client/views/tour/tour.html
@@ -229,11 +229,11 @@
 						  </label>
 					  </div>
 					  <div class="form-line">
-						  <label for="name">
+						  <label for="fullname">
 							  Name
 						  </label>
 						  <span class="form-field">
-							  <input type="text" name="name" id="name">
+							  <input type="text" name="fullname" id="fullname">
 						  </span>
 					  </div>
 					  <div class="form-line">
