logo links to homepage

--- a/client/views/navigation/navigation.html
+++ b/client/views/navigation/navigation.html
@@ -1,7 +1,9 @@
 <template name="navigation">
   <nav id="top-nav">
     <div class="grid-wrapper">
+    <a href="/">
       <img class="logo" src="/img/logo-top.gif">
+    </a>
       {{> navCurrentGroup}}
       <ul class="nav-right">
         <li class="rule"></li>
