highlight current page in the navigation bar

--- a/sphere.styl
+++ b/sphere.styl
@@ -406,6 +406,10 @@ transition()
             link-padding = 10px
             &:hover
                 background-color black
+            &.current
+                background-color black
+                a
+                    opacity 1
             &.tour
                 a
                     background url(img/looking-glass.png) link-padding 50% no-repeat
