--- a/client/views/navigation/navigation.html
+++ b/client/views/navigation/navigation.html
@@ -7,8 +7,8 @@
       {{> navCurrentGroup}}
       <ul class="nav-right">
         <li class="rule"></li>
-        <li class="tour"><a href="/tour">Tour</a></li>
-        <li class="home"><a href="/">Home</a></li>
+        <li class="tour {{tourActiveClass}}"><a href="/tour">Tour</a></li>
+        <li class="home {{homepageActiveClass}}"><a href="/">Home</a></li>
         <li class="login">
           <a>Login</a>
         </li>
