some css for the privacyPolicy page

--- a/client/views/privacyPolicy/privacyPolicy.html
+++ b/client/views/privacyPolicy/privacyPolicy.html
@@ -1,6 +1,6 @@
 <template name="privacyPolicy">
 
-<div class="grid-wrapper">
+<div class="grid-wrapper privacyPolicy">
 <h2>
     Datenschutzerklärung
 </h2>
