--- a/sphere.styl
+++ b/sphere.styl
@@ -946,13 +946,6 @@ h2
 
 
 
-/********************************************
-*********************************************
-Anfang der Styles für die Homepage und die Tour
-*********************************************
-*********************************************
-**/
-
 myGray1 = #d9d9d9
 myGray2 = #cdcdcd
 myGray3 = #f0f0f0
@@ -1757,10 +1750,10 @@ slideAbstand = 300
       height lines3
 
 
-/********************************************
-*********************************************
-Ende der Styles für die Homepage und die Tour
-*********************************************
-*********************************************
-**/
-
+.privacyPolicy
+    text-align justify
+    margin-top lines3
+    margin-bottom lines3
+    
+    h2
+        margin-top line
