don't display the 'forgot password' link

--- a/sphere.styl
+++ b/sphere.styl
@@ -326,7 +326,7 @@ transition()
     button
         color white
         font-size 13px
-        margin-bottom 6px
+        margin-bottom 11px //margin-bottom 6px
     &:before
         content "a"
         font-size 0
@@ -351,6 +351,9 @@ transition()
             font-style normal
             content "⟩ "
             font-weight bold
+
+    .forgotPasswordLink
+        display none
 
 .windows #dropdown-login-form a
     &:before
