--- a/client/views/navigation/loginForm.html
+++ b/client/views/navigation/loginForm.html
@@ -9,6 +9,6 @@
     </label>
     <p class="error"></p>
     <button>Einloggen</button>
-    <a>Passwort vergessen?</a>
+    <a class="forgotPasswordLink">Passwort vergessen?</a>
   </form>
 </template>
