new screens.png for homepage, removed white line on login form

--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -2,7 +2,7 @@
 	<div class="whitebg homepage-bg">
 		<div class="greeting grid-wrapper">
 			<img src="/img/homepage/headline.png" class="headline" alt="unlock the local web">
-			<img src="/img/homepage/screens3.png" class="screens" alt="Beispiel Screen">
+			<img src="/img/homepage/screens.png" class="screens" alt="Beispiel Screen">
 	<!--
 			<h1>
 				Unlock
