marks portrait on contact page

--- a/client/views/contact/contact.html
+++ b/client/views/contact/contact.html
@@ -27,6 +27,11 @@
   	</a>
     <br>
     <img src="/img/contact/contact-handwriting.png" class="handwriting" alt="Wir freuen uns auf Sie!">
+	  <div class="portrait-mark portrait-mark-contact">
+		  <img src="/img/mark.jpg" alt="Portrait Mark Reich" class="portrait">
+		  <br>
+		  Mark Reich, Gr&uuml;nder
+	  </div>
     <div class="google-map">
       <div class="map-container portrait">
         <div class="map_canvas">
