--- a/sphere.styl
+++ b/sphere.styl
@@ -992,6 +992,10 @@ myGray4 = #cacbcc
   box-shadow 0px 0px 5px 0px gray1
   background-color #ffffff
 
+.portrait-mark
+  text-align center
+  font-size 12px
+
 //HOMEPAGE
 
 .homepage-bg
@@ -1315,10 +1319,6 @@ overlay-duration = 0.2s
       font-size 17px
       font-style italic
   
-  .portrait-mark
-    text-align center
-    font-size 12px
-  
   .portrait-mark-form
       float right
   
@@ -1326,10 +1326,6 @@ overlay-duration = 0.2s
       margin-top 30px
       margin-bottom 30px
   
-  .photo-mark
-    padding 4px
-    box-shadow 0px 0px 5px 0px gray1
-    
   h2
     font-style italic
     font-size 25px
@@ -1583,8 +1579,11 @@ slideAbstand = 300
   .handwriting
     font-size 18px
     line-height lines2
-    margin-bottom lines2
+    margin-bottom 30px
     margin-top line
+  
+  .portrait-mark-contact
+    margin-bottom lines2
   
   .google-map
     text-align center
