--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -143,7 +143,7 @@
 				  </div>
 				  <form class="conversionbox-inner">  		
 					  <div class="portrait-mark portrait-mark-form">
-						  <img src="/img/mark.jpg" alt="Portrait Mark Reich" class="photo-mark">
+						  <img src="/img/mark.jpg" alt="Portrait Mark Reich" class="portrait">
 						  <br>
 						  Mark Reich, Gr&uuml;nder
 					  </div>
@@ -233,7 +233,7 @@
             </h2>
             Ihre Nachricht ist bei uns eingegangen. Wir werden uns schnellstm&ouml;glich bei Ihnen melden.
 					  <div class="portrait-mark portrait-mark-thankyou">
-						  <img src="/img/mark.jpg" alt="Portrait Mark Reich" class="photo-mark">
+						  <img src="/img/mark.jpg" alt="Portrait Mark Reich" class="portrait">
 						  <br>
 						  Mark Reich, Gr&uuml;nder
 					  </div>
