--- a/sphere.styl
+++ b/sphere.styl
@@ -1758,3 +1758,14 @@ slideAbstand = 300
     
     h2
         margin-top line
+
+
+/*
+ * nivo slider
+ */
+
+.theme-default .nivo-directionNav a
+    background-image url(/img/nivo/arrows.png)
+
+.theme-default .nivo-controlNav a
+    background-image url(/img/nivo/bullets.png)
