new texts for the tour

--- a/client/views/tour/tour.html
+++ b/client/views/tour/tour.html
@@ -11,29 +11,29 @@
 					&nbsp;
 					<a href="#" class="tour-slider profile-slide">
 						&nbsp;
-						<li>
-							<img src="/img/tour/marker.png" alt="Marker" class="marker">
-							Firmenprofile
+						<li class="firstSlider">
+						  	<img src="/img/tour/marker.png" alt="Marker" class="marker">
+						  	Kundenansprache verbessern
 						</li>
 					</a>
 					&nbsp;
 					<a href="#" class="tour-slider filter-slide">
 						&nbsp;
 						<li>
-						Filter
+				  		Abschlussquoten erh&ouml;hen
 						</li>
 					</a>
 					&nbsp;
 					<a href="#" class="tour-slider export-slide">
 						&nbsp;
 						<li>
-						Export
+					  	CRM aufwerten
 						</li>
 					</a>
 					&nbsp;
 					<a href="#" class="tour-slider deal-slide">
 						&nbsp;
-						<li>
+						<li class="lastSlider">
 							Gutschein-Daten
 							<span class="special">
 								SPECIAL
@@ -55,20 +55,20 @@
 	<div class="tour-page grid-wrapper profile-slide">
 		<div class="description-box">
 			<h2>
-				Ausf&uuml;hrliche Firmenprofile
+				Mehr Kundenwissen ohne zus&auml;tzlichen Aufwand
 			</h2>
 			<p>
-				Zu jedem Unternehmen in unserer Datenbank gibt es eine Profilseite mit ausf&uuml;hrlichen Informationen.
+				Erfahren Sie mit einem Klick alles über Ihre Kunden. Unsere Firmenprofile enthalten s&auml;mtliche Informationen die Sie im Vertrieb benötigen. Verbringen Sie weniger Zeit mit Informationsbeschaffung und mehr Zeit beim Kunden.
 			</p>
 			<ul>
 				<li>
-					Stammdaten
+					Kontaktdaten
 				</li>
 				<li>
 					Detaillierte Auflistung der Werbeaktivit&auml;ten
 				</li>
 				<li>
-					Kundenbewertungen und Social Media Interaktion
+					Kundenbewertungen und Social Media Daten
 				</li>
 			</ul>
 			<a href="#" class="open-link">
@@ -82,7 +82,7 @@
 		<div class="screen-box">
 			<img src="/img/tour/profile-screen.png" alt="Ausschnitt aus unseren Firmenprofilen">
 			<p>
-				Ausschnitt aus unseren Firmenprofilen
+				Abschlussquoten erh&ouml;hen
 			</p>
 		</div>
 	</div>
@@ -90,20 +90,20 @@
 	<div class="tour-page grid-wrapper filter-slide">
 		<div class="description-box">
 			<h2>
-				Zahlreiche Such- und Filterm&ouml;glichkeiten
+				Zielgruppen eingrenzen und Abschlussquoten erh&ouml;hen
 			</h2>
 			<p>
-				&Uuml;ber Such- und Filtereinstellungen k&ouml;nnen pr&auml;zise Zielgruppen definiert werden.
+				Sprechen Sie nur die Unternehmen an die den gr&ouml;&szlig;ten Bedarf an Ihrem Produkt haben. Grenzen Sie Ihre Zielgruppe mit zahlreichen Filterm&ouml;glichkeiten pr&auml;zise ein:
 			</p>
 			<ul>
 				<li>
-					6 Filtereinstellungen erm&ouml;glichen genaue Eingrenzung der Unternehmen nach Branche, Region und Internet-Aktivit&auml;t
+					nach Branche &amp; Region
 				</li>
 				<li>
-					Filterm&ouml;glichkeit nach einzelnen Quellen erm&ouml;glicht umfangreiche Wettbewerbsbeobachtung
+					nach Werbeaktivit&auml;ten
 				</li>
 				<li>
-					Finden Sie einzelne Kunden durch unsere direkte Unternehmenssuche
+					nach Kundenbewertungen
 				</li>
 			</ul>
 			<a href="#" class="open-link">
@@ -125,22 +125,20 @@
 	<div class="tour-page grid-wrapper export-slide">
 		<div class="description-box">
 			<h2>
-				Markierungs- und Export-
-				<br>
-				funktionen
+				Aktuelle Firmeninformationen in eigenes CRM übernehmen
 			</h2>
 			<p>
-				Markieren Sie einzelne Unternehmen als Lead oder als Kunde und nutzen Sie die Exportfunktion um die Daten weiterzuverarbeiten.
+				Importieren Sie unsere Daten direkt in Ihr eigenes CRM und beginnen Sie mit der Kundenansprache. 
 			</p>
 			<ul>
 				<li>
-					Einteilen von Unternehmen in verschiedene Listen f&uuml;r bessere &Uuml;bersicht
+					Daten im CSV-Format (andere Formate auf Anfrage)
 				</li>
 				<li>
-					Export von ganzen Unternehmenslisten oder einzelnen Firmenprofilen
+					Einfacher Import in jedes CRM-System
 				</li>
 				<li>
-					Export CSV-Datenformat f&uuml;r die schnelle Integration ins eigene CRM-System. Weitere Formate auf Anfrage!
+					Sofortige Verwendung der Informationen im Verkaufsprozess
 				</li>
 			</ul>
 			<a href="#" class="open-link">
