--- a/sphere.styl
+++ b/sphere.styl
@@ -1418,9 +1418,15 @@ overlay-duration = 0.2s
   
   li
     display inline-block
-    pad = 51 px
+    pad = 17 px
     padding-right pad
     padding-left pad
+  
+  li.firstSlider
+      padding-left 0px
+    
+  li.lastSlider
+      padding-right 0px
   
   link-top-padding = 25px
   a.tour-slider
