uniform, slightly changed conversionbox

--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -27,7 +27,7 @@
 			<a href="#" class="open-link">
 				<button class="trialaccess button">
 					<div class="tick button-image">
-						Kostenlosen Testzugang anfordern
+						Mehr Informationen anfordern
 					</div>
 				</button>
 			</a>
@@ -36,38 +36,35 @@
 	<div class="functions grid-wrapper">
 		<ul>
 			<li>
-				<h4 class="headline-arrow">
+				<h4 class="headline-customer">
 					<span class="function-headline">
-					Effiziente Lead-Generierung
+					Kunden besser verstehen
 					</span>
 				</h4>
 				<p class="function-description">
-					Mit unseren detaillierten Firmenprofilen sparen Sie Zeit und Ressourcen im Vertrieb an lokale Unternehmen.
+					Mit unseren Firmenprofilen erhalten Sie relevante Kundeninformationen auf einen Blick - ohne selbst recherchieren zu m&uuml;ssen.
 				</p>
 				<a href="/tour/profile-slide/">mehr Informationen</a>
 			</li>
 			<li>
-				<h4 class="headline-customer">
+				<h4 class="headline-arrow">
 					<span class="function-headline">
-					Genaue Zielgruppenauswahl
+					Effizienter Leads generieren
 					</span>
 				</h4>
 				<p class="function-description">
-				Unsere Unternehmensfilter erm&ouml;glichen Ihnen eine genaue Eingrenzung Ihrer Zielgruppe auf Basis der Online-Aktivit&auml;ten.
+	  			Unsere zahlreichen Filter erm&ouml;glichen Ihnen eine genaue Eingrenzung Ihrer Zielgruppe auf Basis der Online-Aktivit&auml;ten.
 				</p>
 				<a href="/tour/filter-slide/">mehr Informationen</a>
 			</li>
 			<li class="last-item">
 				<h4 class="headline-deal">
 					<span class="function-headline">
-						Gutschein-Special
-					<span class="special">
-						AKTION
-					</span>
+						Daten schneller einsetzen
 					</span>
 				</h4>
 				<p class="function-description">
-				Erfahren Sie, welche Unternehmen bereits bei Groupon &amp; Co. aktiv geworden sind. Wie steht es um Ihre Werbekunden?
+  				Verwenden Sie aktuelle Firmeninformationen in ihrem CRM-System und reagieren Sie schneller auf das Kundenverhalten.
 				</p>
 				<a href="/tour/deal-slide/">mehr Informationen</a>
 			</li>
@@ -75,7 +72,7 @@
   </div>
   <div class="grid-wrapper partner">
   	<h3>
-  		Ausgew&auml;hlte <strong>Innovationspartner</strong>
+  		Ausgew&auml;hlte <strong>Partner</strong>
   	</h3>
   </div>
 
@@ -127,142 +124,7 @@
 		</a>
   </div>
 
-  <div class="overlay-outer">
-  </div>
-  <div class="overlay-slideshow">
-    <div class="overlay-inner">
-    	<div class="conversionbox-outer">
-			  <div class="conversionbox">
-				  <a href="#" class="close-link">
-					  <img src="/img/close.png" alt="Close-Button" class="close">
-				  </a>
-				  <div class="whitebg conversion-header">
-					  <h4 class="headline-conversionbox tel-icon">
-						  Nehmen Sie Kontakt auf
-					  </h4>
-				  </div>
-				  <form class="conversionbox-inner">  		
-					  <div class="portrait-mark portrait-mark-form">
-						  <img src="/img/mark.jpg" alt="Portrait Mark Reich" class="portrait">
-						  <br>
-						  Mark Reich, Gr&uuml;nder
-					  </div>
-					  <div class="telephone">
-						  <p class="line1">
-							  Rufen Sie uns an
-						  </p>				
-						  <p class="telNo">
-							  030 609 8448 - 11		
-						  </p>		
-						  <p class="line3">
-							  Wir freuen uns auf Sie!
-						  </p>				
-					  </div>
-					  <h4>
-						  Oder fordern Sie einen R&uuml;ckruf an:
-					  </h4>
-					  <div class="form-line">
-						  <label for="fullname">
-							  Name
-						  </label>
-						  <span class="form-field">
-							  <input type="text" name="fullname" id="fullname">
-						  </span>
-					  </div>
-					  <div class="form-line">
-						  <label for="telephone">
-							  Telefon
-						  </label>
-						  <span class="form-field">
-							  <input type="text" name="telephone" id="telephone">
-						  </span>
-					  </div>
-					  <div class="form-line">
-						  <label for="call-back-email">
-							  E-Mail
-						  </label>
-						  <span class="form-field">
-							  <input type="text" name="call-back-email" id="call-back-email">
-						  </span>
-					  </div>
-					  <div class="form-line">
-						  <label for="company">
-							  Unternehmen
-						  </label>
-						  <span class="form-field">
-							  <input type="text" id="company" name="company">
-						  </span>
-					  </div>
-					  <div class="newsletterbox">
-						  <input type="checkbox" name="newsletter" id="newsletter" value="yes">
-						  <label for="newsletter" class="newsletter-label">
-							  Ja, ich m&ouml;chte aktuelle Informationen von AboutLocal erhalten.
-						  </label>
-					  </div>
-					  <div class="submit-box">
-						  <button class="call-back-button button">
-							  <div class="call-back-image button-image">
-								  R&uuml;ckruf anfordern
-							  </div>
-						  </button>
-						  <br>
-						  <a href="#" class="close-link">
-							  abbrechen
-						  </a>
-					  </div>
-				  </form>  		
-			  </div>
-    	</div>
-    </div>
-    
-    
-    <div class="overlay-inner">
-    	<div class="conversionbox-outer">
-			  <div class="conversionbox">
-				  <a href="#" class="close-link">
-					  <img src="/img/close.png" alt="Close-Button" class="close">
-				  </a>
-				  <div class="whitebg conversion-header">
-					  <h4 class="headline-conversionbox tel-icon">
-						  Nehmen Sie Kontakt auf
-					  </h4>
-				  </div>
-				  <div class="conversionbox-inner thankyou-box">  		
-            <h2>
-              Vielen Dank f&uuml;r ihre Anfrage!
-            </h2>
-            Ihre Nachricht ist bei uns eingegangen. Wir werden uns schnellstm&ouml;glich bei Ihnen melden.
-					  <div class="portrait-mark portrait-mark-thankyou">
-						  <img src="/img/mark.jpg" alt="Portrait Mark Reich" class="portrait">
-						  <br>
-						  Mark Reich, Gr&uuml;nder
-					  </div>
-				  </div>  		
-			  </div>
-    	</div>
-    </div>
-
-    <div class="overlay-inner">
-    	<div class="conversionbox-outer">
-			  <div class="conversionbox">
-				  <a href="#" class="close-link">
-					  <img src="/img/close.png" alt="Close-Button" class="close">
-				  </a>
-				  <div class="whitebg conversion-header">
-					  <h4 class="headline-conversionbox tel-icon">
-						  Nehmen Sie Kontakt auf
-					  </h4>
-				  </div>
-				  <div class="conversionbox-inner errormessage-box">  		
-            <h2>
-              Es ist ein Fehler aufgetreten!
-            </h2>
-            Ihre Nachricht konnte nicht &uuml;bermittelt werden. Bitte laden Sie die Seite neu und versuchen Sie es noch einmal.
-				  </div>  		
-			  </div>
-    	</div>
-    </div>
-  </div>
+{{> conversionBox}}
 
 {{invokeAfterLoad}}  
 </template>
