--- a/client/views/tour/tour.html
+++ b/client/views/tour/tour.html
@@ -199,128 +199,7 @@
 	</div>
 </div>
 
-  <div class="overlay-outer">
-  </div>
-  <div class="overlay-slideshow">
-    <div class="overlay-inner">
-    	<div class="conversionbox-outer">
-			  <div class="conversionbox">
-				  <a href="#" class="close-link">
-					  <img src="/img/close.png" alt="Close-Button" class="close">
-				  </a>
-				  <div class="whitebg conversion-header">
-					  <h4 class="headline-conversionbox info-icon">
-						  Fordern Sie weitere Informationen an
-					  </h4>
-				  </div>
-				  <form class="conversionbox-inner">
-					  <div class="checkbox-box">
-						  <input type="checkbox" name="newsletter" id="newsletter" value="yes">
-						  <label for="newsletter" class="checkbox-label">
-							  Ich m&ouml;chte <strong>aktuelle Informationen</strong> von AboutLocal erhalten.
-						  </label>
-					  </div>
-					  <div class="checkbox-box">
-						  <input type="checkbox" name="call-back" id="call-back" value="yes" checked="checked">
-						  <label for="call-back" class="checkbox-label">
-							  Ich m&ouml;chte <strong>einen R&uuml;ckruf</strong> von AboutLocal erhalten.
-						  </label>
-					  </div>
-					  <div class="form-line">
-						  <label for="fullname">
-							  Name
-						  </label>
-						  <span class="form-field">
-							  <input type="text" name="fullname" id="fullname">
-						  </span>
-					  </div>
-					  <div class="form-line">
-						  <label for="telephone">
-							  Telefon
-						  </label>
-						  <span class="form-field">
-							  <input type="text" name="telephone" id="telephone">
-						  </span>
-					  </div>
-					  <div class="form-line">
-						  <label for="call-back-email">
-							  E-Mail
-						  </label>
-						  <span class="form-field">
-							  <input type="text" name="call-back-email" id="call-back-email">
-						  </span>
-					  </div>
-					  <div class="form-line">
-						  <label for="company">
-							  Unternehmen
-						  </label>
-						  <span class="form-field">
-							  <input type="text" id="company" name="company">
-						  </span>
-					  </div>
-					  <div class="submit-box">
-						  <button class="call-back-button button">
-							  <div class="conversionbox-info-image button-image">
-								  weitere Informationen anfordern
-							  </div>
-						  </button>
-						  <br>
-						  <a href="#" class="close-link">
-							  abbrechen
-						  </a>
-					  </div>
-				  </form>
-			  </div>  		
-    	</div>
-    </div>
-
-    <div class="overlay-inner">
-    	<div class="conversionbox-outer">
-			  <div class="conversionbox">
-				  <a href="#" class="close-link">
-					  <img src="/img/close.png" alt="Close-Button" class="close">
-				  </a>
-				  <div class="whitebg conversion-header">
-					  <h4 class="headline-conversionbox tel-icon">
-						  Nehmen Sie Kontakt auf
-					  </h4>
-				  </div>
-				  <div class="conversionbox-inner thankyou-box">  		
-            <h2>
-              Vielen Dank f&uuml;r ihre Anfrage!
-            </h2>
-            Ihre Nachricht ist bei uns eingegangen. Wir werden uns schnellstm&ouml;glich bei Ihnen melden.
-					  <div class="portrait-mark portrait-mark-thankyou">
-						  <img src="/img/mark.jpg" alt="Portrait Mark Reich" class="portrait">
-						  <br>
-						  Mark Reich, Gr&uuml;nder
-					  </div>
-				  </div>  		
-			  </div>
-    	</div>
-    </div>
-
-    <div class="overlay-inner">
-    	<div class="conversionbox-outer">
-			  <div class="conversionbox">
-				  <a href="#" class="close-link">
-					  <img src="/img/close.png" alt="Close-Button" class="close">
-				  </a>
-				  <div class="whitebg conversion-header">
-					  <h4 class="headline-conversionbox tel-icon">
-						  Nehmen Sie Kontakt auf
-					  </h4>
-				  </div>
-				  <div class="conversionbox-inner errormessage-box">  		
-            <h2>
-              Es ist ein Fehler aufgetreten!
-            </h2>
-            Ihre Nachricht konnte nicht &uuml;bermittelt werden. Bitte laden Sie die Seite neu und versuchen Sie es noch einmal.
-				  </div>  		
-			  </div>
-    	</div>
-    </div>
-  </div>
+{{> conversionBox}}
 
 {{invokeAfterLoad}}
 </template>
