--- a/sphere.styl
+++ b/sphere.styl
@@ -1254,7 +1254,7 @@ overlay-duration = 0.2s
   border solid 8px rgba(31,33,35,0.7)
   display inline-block
   text-align left
-  margin-top 70px
+  margin-top 20px
   width ( 7 * (column + gutter) ) px
 
 .conversionbox
@@ -1274,9 +1274,6 @@ overlay-duration = 0.2s
   
   .info-icon
     background url("img/tour/info-icon.png") no-repeat 0% 50%
-  
-  .tel-icon
-    background url("img/homepage/tel.png") no-repeat 0% 50%
   
   .headline-conversionbox
     font-size 19px
@@ -1347,6 +1344,8 @@ overlay-duration = 0.2s
   
     .form-field
       float right
+    
+    .form-input-field
       hintergrundFarbe = #e6e6e6
       border 3px solid hintergrundFarbe
       background-color hintergrundFarbe
@@ -1373,12 +1372,12 @@ overlay-duration = 0.2s
       font-weight bold
   
   
-  .newsletterbox
+  .callBackBox
     float right
     width 278px
     padding-top line
     
-    .newsletter-label
+    .callBack-label
       display inline-block
       float right
       width 252px
